--- a/index.css
+++ b/index.css
@@ -257,14 +257,16 @@ button{
 }
 
 .squiggly-line-top{
-    position: absolute;
+    position: fixed; 
     width: 60%;
-    right: 0px; 
+    top: 0;
+    right: 0;
+    z-index: -1;
 }
 
 .squiggly-line-bottom {
-    position: fixed; /* Keeps it at the bottom even on scroll */
-    width: 60%; /* Adjusts to screen width */
+    position: fixed; 
+    width: 60%; 
     bottom: 0;
     left: 0;
     z-index: -1;
